--- a/vignettes/articles/Scratch.Rmd
+++ b/vignettes/articles/Scratch.Rmd
@@ -92,13 +92,13 @@ This is a fairly simple function that can follow a basic template. The main argu
 
  * The mode. If the model can do more than one mode, you might default this to "unknown". In our case, since it is only a classification model, it makes sense to default it to that mode. 
  * The argument names (`sub_classes` here). These should be defaulted to `NULL`.
- * `...` is used to pass in other arguments to the underlying model fit functions. 
+ * `...` are _not_ used in the main model function. 
 
 A basic version of the function is:
 
 ```{r model-fun}
 mixture_da <-
-  function(mode = "classification",  sub_classes = NULL, ...) {
+  function(mode = "classification",  sub_classes = NULL) {
     # Check for correct mode
     if (!(mode %in% mixture_da_modes))
       stop("`mode` should be one of: ",
@@ -106,14 +106,10 @@ mixture_da <-
            call. = FALSE)
     
     # Capture the arguments in quosures
-    others <- enquos(...)
-    args <- list(sub_classes = enquo(sub_classes))
+    args <- list(sub_classes = rlang::enquo(sub_classes))
 
-    # Save the other arguments but remove them if they are null. 
-    no_value <- !vapply(others, is.null, logical(1))
-    others <- others[no_value]
-    
-    out <- list(args = args, others = others,
+    # Save some empty slots for future parts of the specification
+    out <- list(args = args, others = NULL,
                 mode = mode, method = NULL, engine = NULL)
     
     # set classes in the correct order
@@ -235,7 +231,8 @@ For example:
 library(tidymodels)
 
 mixture_da(sub_classes = 2) %>%
-  translate(engine = "mda")
+  set_engine("mda") %>%
+  translate()
 ```
 
 Let's try it on the iris data:
@@ -249,7 +246,8 @@ iris_test  <-  testing(iris_split)
 mda_spec <- mixture_da(sub_classes = 2)
 
 mda_fit <- mda_spec %>%
-  fit(Species ~ ., data = iris_train, engine = "mda")
+  set_engine("mda") %>%
+  fit(Species ~ ., data = iris_train)
 mda_fit
 
 predict(mda_fit, new_data = iris_test) %>%
@@ -281,8 +279,9 @@ However, there are some models (e.g. `glmnet`, `plsr`, `Cubist`, etc.) that can 
 For example, for a multinomial `glmnet` model, we leave `penalty` unspecified when fitting and get predictions on a sequence of values:
 
 ```{r mnom-glmnet-fit}
-mod <- multinom_reg(mixture = 1/3)
-mod_fit <- fit(mod, Species ~ ., data = iris, engine = "glmnet")
+mod <- multinom_reg(mixture = 1/3) %>%
+  set_engine("glmnet")
+mod_fit <- fit(mod, Species ~ ., data = iris)
 
 preds <- multi_predict(mod_fit, iris[1:3, -5], penalty = c(0, 0.01, 0.1), type = "prob")
 preds
@@ -313,8 +312,9 @@ logistic_reg() %>% translate(engine = "glm")
 
 # but you can change it:
 
-logistic_reg(family = stats::binomial(link = "probit")) %>% 
-  translate(engine = "glm")
+logistic_reg() %>% 
+  set_engine("glm", family = stats::binomial(link = "probit")) %>%
+  translate()
 ```
 
 That's what `defaults` are for. 
@@ -329,7 +329,7 @@ For example, the `ranger` and `randomForest` package functions have arguments fo
 
 ```{r rf-trans, eval = FALSE}
 # Simplified version
-translate.rand_forest <- function (x, engine, ...){
+translate.rand_forest <- function (x, engine = x$engine, ...){
   # Run the general method to get the real arguments in place
   x <- translate.default(x, engine, ...)
   
@@ -337,7 +337,7 @@ translate.rand_forest <- function (x, engine, ...){
   arg_vals <- x$method$fit$args
   
   # Check and see if they make sense for the engine and/or mode:
-  if (x$engine == "ranger") {
+  if (engine == "ranger") {
     if (any(names(arg_vals) == "importance")) 
       # We want to check the type of `importance` but it is a quosure. We first
       # get the expression. It is is logical, the value of `quo_get_expr` will
