--- a/vignettes/articles/Scratch.Rmd
+++ b/vignettes/articles/Scratch.Rmd
@@ -109,7 +109,7 @@ mixture_da <-
     args <- list(sub_classes = rlang::enquo(sub_classes))
 
     # Save some empty slots for future parts of the specification
-    out <- list(args = args, others = NULL,
+    out <- list(args = args, eng_args = NULL,
                 mode = mode, method = NULL, engine = NULL)
     
     # set classes in the correct order
