--- a/vignettes/articles/Models.Rmd
+++ b/vignettes/articles/Models.Rmd
@@ -22,27 +22,15 @@ library(cli)
 library(kableExtra)
 ```
 
-```{r modelinfo, include = FALSE}
-mod_names <- function(model, engine) {
-  obj_name <- paste(model, engine, "data", sep = "_")
-  tibble(module = getFromNamespace(obj_name, "parsnip") %>% names(),
-         model = model, 
-         engine = engine)
-}
-
-engine_info <- 
-  parsnip:::engine_info %>%
-  distinct(model, engine) %>% 
-  mutate(obj_name = paste(model, engine, "data", sep = "_")) 
-```
-
 `parsnip` contains wrappers for a number of models. For example, the `parsnip` function `rand_forest()` can be used to create a random forest model. The **mode** of a model is related to its goal. Examples would be regression and classification. 
 
 The list of models accessible via `parsnip` is:
 
 ```{r model-table, results = 'asis', echo = FALSE}
+mod_names <- get_from_env("models")
+
 mod_list <- 
-  parsnip:::engine_info %>% 
+  map_dfr(mod_names, ~ get_from_env(.x) %>% mutate(model = .x)) %>% 
   distinct(mode, model) %>% 
   mutate(model = paste0("`", model, "()`")) %>%
   arrange(mode, model) %>%
@@ -59,16 +47,14 @@ for (i in 1:nrow(mod_list)) {
 _How_ the model is created is related to the _engine_. In many cases, this is an R modeling package. In others, it may be a connection to an external system (such as Spark or Tensorflow). This table lists the engines for each model type along with the type of prediction that it can make (see `predict.model_fit()`). 
 
 ```{r pred-table, results = 'asis', echo = FALSE}
-  map2_dfr(engine_info$model, engine_info$engine, mod_names) %>%
-  dplyr::filter(!(module %in% c("libs", "fit"))) %>%
+map_dfr(mod_names, ~ get_from_env(paste0(.x, "_predict")) %>% mutate(model = .x)) %>% 
+  dplyr::select(-value) %>% 
   mutate(
-    module = ifelse(module == "confint", "conf_int", module),
-    module = ifelse(module == "predint", "pred_int", module),   
-    module = paste0("`", module, "`"),
+    type = paste0("`", type, "`"),
     model = paste0("`", model, "()`"),
     ) %>%
   mutate(check = cli::symbol$tick) %>%
-  spread(module, check, fill =  cli::symbol$times) %>%
+  spread(type, check, fill =  cli::symbol$times) %>%
   kable(format = "html") %>% 
   kable_styling(full_width = FALSE) %>%
   collapse_rows(columns = 1)
