--- a/vignettes/parsnip_Intro.Rmd
+++ b/vignettes/parsnip_Intro.Rmd
@@ -109,7 +109,7 @@ rf_with_seed %>%
 #> Ranger result
 #> 
 #> Call:
-#>  ranger::ranger(formula = formula, data = data, mtry = ~4, num.trees = ~2000,      seed = ~63233, num.threads = 1, verbose = FALSE) 
+#>  ranger::ranger(formula = formula, data = data, mtry = ~4, num.trees = ~2000,      seed = sample.int(10^5, 1), num.threads = 1, verbose = FALSE) 
 #> 
 #> Type:                             Regression 
 #> Number of trees:                  2000 
@@ -138,7 +138,7 @@ rf_with_seed %>%
 #> 
 #> 
 #> Call:
-#>  randomForest(x = as.data.frame(x), y = y, ntree = ~2000, mtry = ~4,      seed = ~63233) 
+#>  randomForest(x = as.data.frame(x), y = y, ntree = ~2000, mtry = ~4) 
 #>                Type of random forest: regression
 #>                      Number of trees: 2000
 #> No. of variables tried at each split: 4
@@ -147,9 +147,9 @@ rf_with_seed %>%
 #>                     % Var explained: 84.3
 ```
 
-Note that the call objects show `num.trees = ~2000`. The tilde is the consequence of `parsnip` using quosures to process the model specification's arguments. 
+Note that the call objects show `num.trees = ~2000`. The tilde is the consequence of `parsnip` using [quosures](https://adv-r.hadley.nz/evaluation.html#quosures) to process the model specification's arguments. 
 
-Normally, when a function is executed, the function's arguments are immediately evaluated. In the case of `parsnip`, the model specification's arguments are _not_; the expression is captured along with the environment where it should be evaluated. That is what a quosure does. 
+Normally, when a function is executed, the function's arguments are immediately evaluated. In the case of `parsnip`, the model specification's arguments are _not_; the [expression is captured](https://www.tidyverse.org/articles/2019/04/parsnip-internals/) along with the environment where it should be evaluated. That is what a quosure does. 
 
 `parsnip` uses these expressions to make a model fit call that is evaluated. The tilde in the call above reflects that the argument was captured using a quosure. 
 
